# olympic-coast-treks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend-deploy.yml  backend-unit-tests.yml  frontend-deploy.yml  frontend-unit-tests.yml
backend/: Dockerfile  Makefile  cloudbuild.yml  pyproject.toml
backend/src/olympic_coast_treks/: __init__.py  api.py  data.py  plot.py  process.py  tides.py
backend/tests/: test_api.py  test_plot.py  test_process.py  test_tides.py
frontend/: .env  .firebaserc  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: DatePicker.tsx  DateRangePicker.tsx  DistanceRangeSlider.tsx  Dropdown.tsx  HikingSpeedSlider.tsx  RoutePlotter.tsx  StartEndDropdown.tsx  TidalBufferSlider.tsx
frontend/src/views/: AnalyzeRoute.tsx  FindRoutes.tsx
src/olympic_coast_treks/: api.py  data.py  process.py  tides.py
tests/: test_api.py  test_process.py  test_tides.py
