[project]
name = "olympic-coast-treks"
version = "0.0.0"
description = "Tool for planning backpacking treks along the Olympic Coast"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astral>=3.2",
    "diskcache>=5.6.3",
    "fastapi>=0.115.13,<1.0.0",
    "polars>=1.31.0,<2.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3,<1.0.0",
    "pytz>=2025.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "ruff<1.0.0,>=0.12.1",
]

[tool.ruff]
line-length = 79
