[project]
name = "olympic-coast-treks"
dynamic = ["version"]
description = "Tool for planning backpacking treks along the Olympic Coast"
requires-python = ">=3.9"
dependencies = [
    "astral>=3.2",
    "diskcache>=5.6.3",
    "fastapi>=0.115.13,<1.0.0",
    "polars>=1.31.0,<2.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3,<1.0.0",
    "pytz>=2025.2",
    "tenacity>=9.1.2",
    "plotly>=6.2.0",
    "kaleido>=1.0.0",
    "numpy>=2.0.2",
    "gunicorn>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "ruff<1.0.0,>=0.12.1",
]

[tool.ruff]
line-length = 79

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olympic_coast_treks"]

[tool.hatch.version]
source = "vcs"
root = ".."  # Tell hatch-vcs to look one level up for .git
